--- a/css/scss/chart.scss
+++ b/css/scss/chart.scss
@@ -5,10 +5,10 @@
 $color-1: #e2e3e3; // light silver
 $color-2: #969ca9; // slate
 $color-3: #7aaec5; // accent blue light
-$color-4: #5f96bb; // accent blue dark
+$color-4: #cb4460; // red circle
 $color-5: #efefef; // light white
 $color-6: #e7e9ec; // darker white
-$color-7: #d0d1d1; // grey
+$color-7: #cb4460; // red line
 $color-8: #92b6c7; // lighter blue
 $color-9: #9ea0a6; // grey text
 $color-10: #699dc6; // button blue
