--- a/css/css/chart.css
+++ b/css/css/chart.css
@@ -79,10 +79,10 @@ svg {
   stroke: #cb4460; }
 
 #entity-chart text {
-  fill: #92b6c7; }
+  fill: #cb4460; }
 
 #entity-chart path {
-  stroke: #92b6c7;
+  stroke: #cb4460;
   stroke-width: 3px;
   fill: none; }
 
