homepage avec la loupe

--- a/louis/css/home.css
+++ b/louis/css/home.css
@@ -4,20 +4,24 @@ section{
 }
 
 .logo{
-  margin: 7% 0 10% 0;
+  margin: 7% auto 10% auto;
   width: 25%;
 }
 
 .inputstyle{
 	width: 60%; 
-	margin: auto;
+	//margin: auto;
 	border-bottom: solid 1px !important;
 	margin-top: 20px;
 	font-size: 1.6em;
   border: none;
   font-family: 'Raleway';
   padding: 0 1% 0 1%;
-  display: block;
+  clear: both;
+}
+
+input[type=image]{
+  width: 1.5%;
 }
 
 input::-webkit-input-placeholder {
@@ -42,7 +46,7 @@ input:focus{
 
 }
 
-.trait{
+.line{
   position: relative;
   left:13%;
   width: 2%;
@@ -151,4 +155,42 @@ input:focus{
   opacity: 1;
 }
 
-.media__body h2 { margin-top: 0; }
+.media__body h2 {
+  margin-top: 0; 
+}
+
+.media:nth-child(n+8){
+  visibility: hidden;
+}
+
+
+.opacity{
+  animation-name: opacity;
+  -webkit-animation-name: opacity;  
+
+  animation-duration: 1s; 
+  -webkit-animation-duration: 1s;
+
+  animation-timing-function: ease;  
+  -webkit-animation-timing-function: ease;
+
+  visibility: visible !important;     
+}
+
+@keyframes opacity {
+  0% {
+    opacity: 0
+  }    
+  100% {
+    opacity: 1
+  }
+}
+
+@-webkit-keyframes opacity {
+  0% {
+    opacity: 0
+  }    
+  100% {
+    opacity: 1
+  }
+}
