--- a/dataviz_final/ressources/css/result/style.css
+++ b/dataviz_final/ressources/css/result/style.css
@@ -73,6 +73,10 @@ h1 {
   	text-align: left;
 }
 
+header a {
+  color: #000;
+}
+
 .synopsis {
 	font-family: Gotham-book;
   	margin-top: 20px;
@@ -118,6 +122,11 @@ li {
 .active {
 	border-bottom: solid 3px #cb4460;
 	color: #222 !important;
+}
+
+.popularity a {
+    color:#cb4460;
+    text-decoration: none;
 }
 
 /******** SEARCH BAR *********/
@@ -237,9 +246,6 @@ button:focus{
     height: 100%;
 }
 
-a{
-    color:#000;
-}
 
 /******* CANVAS ****/
 
@@ -586,5 +592,11 @@ link_series:nth-child(54) {
           animation-delay: 2.85s;
 }
 
+
+/********** CHARACTERS ***********/
+
+.characters {
+  display: none;
+}
 
 
