--- a/Romain/dataviz_final2/ressources/css/result/style.css
+++ b/Romain/dataviz_final2/ressources/css/result/style.css
@@ -20,7 +20,6 @@
     font-family: Gotham-Medium;
     src: url('../../font/Gotham-Medium.otf') format('truetype');
     src: url('../../font/Gotham-Medium.woff') format('woff');
-
 }
 
 html, body {
@@ -33,8 +32,12 @@ body {
   min-height: 100%;
   overflow: hidden;
   font-family: Gotham-book;
-    font-weight: 400;
-    font-size: 1em;
+  font-weight: 400;
+  font-size: 1em;
+}
+
+.clear {
+  clear: both;
 }
 
 .main {
@@ -43,17 +46,17 @@ body {
 }
 
 .left {
-  padding: 50px 100px;
+  padding: 30px 100px;
 }
 
 .logo {
   max-width: 300px;
   float: left;
   font-family: Gotham-Thin;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-    border-top: solid 2px black;
-    padding-top: 4px;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  border-top: solid 2px black;
+  padding-top: 4px;
 }
 
 .logo-bold {
@@ -63,14 +66,14 @@ body {
 
 h1 {
   font-family: Gotham-ultra;
-    font-weight: 900;
-    font-size: 2.5vw;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-    margin-top: 50px;
-    max-width: 60%;
-    line-height: 1.3em; 
-    text-align: left;
+  font-weight: 900;
+  font-size: 2.5vw;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  margin-top: 30px;
+  max-width: 60%;
+  line-height: 1.3em; 
+  text-align: left;
 }
 
 header a {
@@ -105,7 +108,7 @@ li {
   font-family: Gotham-Medium;
   font-size: 0.9em;
   text-transform: uppercase;
-  padding: 0.7vw 0.8vw;
+  padding: 0.6vw 0.8vw;
   border: none;
   background-color: #fff;
   white-space: nowrap;
@@ -130,8 +133,10 @@ li {
 }
 
 .next {
+  position: fixed;
   width: 100px;
-  margin: auto;
+  left: 23%;
+  bottom: 10px;
 }
 
 .next i {
@@ -140,17 +145,31 @@ li {
   -ms-transform: scaleX(1.3);
       transform: scaleX(1.3);
   color: #ddd;
-  margin-top: -2px;
   cursor: pointer
 }
 
+.prec {
+  position: fixed;
+  width: 100px;
+  left: 23%;
+  top: 10px;
+}
+
+.prec i {
+  font-size: 50px;
+  -webkit-transform: scaleX(1.3);
+  -ms-transform: scaleX(1.3);
+      transform: scaleX(1.3);
+  color: #ddd;
+  cursor: pointer
+}
 
 .open {
     opacity:1;
   -webkit-animation-name: 'slideIn';
           animation-name: 'slideIn';
-  -webkit-animation-duration: 0.5s;
-          animation-duration: 0.5s;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
   -webkit-animation-timing-function:ease;
           animation-timing-function:ease;
   animation-fil-mode: both;
@@ -160,29 +179,51 @@ li {
 /********** CHARACTERS ***********/
 
 .characters {
-  opacity:0;
-  margin-top: -500px;
-  display:block;
-  background-color: #fff;
-  -webkit-animation-name: 'slidePerso';
-          animation-name: 'slidePerso';
-  -webkit-animation-duration: 0.8s;
-          animation-duration: 0.8s;
-  -webkit-animation-timing-function:ease;
-          animation-timing-function:ease;
-  animation-fil-mode: both;
+  width: 100%;
+  height: 100%;
 }
 
 .hidden {
   opacity: 0;
   display: none;
-  -webkit-animation-name: 'slideOut';
-          animation-name: 'slideOut';
-  -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-  -webkit-animation-timing-function:ease;
-          animation-timing-function:ease;
-  animation-fill-mode: both;
+  overflow: scroll;
+}
+
+.col-half {
+  float:left;
+  width:50%;
+}
+.radius-img {
+  float: left;
+  display: block;
+  width: 120px;
+  height: 120px;
+  margin: 30px 10px;
+  border-radius: 200px;
+  background-position: center center;
+}
+
+.charactername  {
+  font-size: 18px;
+  color: #222;
+  font-family: Gotham-ultra;
+  text-transform: uppercase;
+  text-align: left;
+  margin-top: 50px;
+}
+
+.actorname {
+  margin-left: 10px;
+  margin-top: 5px;
+  text-align: left;
+  color: #444;
+  font-family: Gotham-book;
+  font-size: 14px;
+
+}
+
+.as {
+  color: #cb4460;
 }
 
 
@@ -272,6 +313,11 @@ button:focus{
   z-index: 1000;
   position: absolute;
   background-color: #fff;
+  transition: width 0.3s ease-in;
+}
+
+.white-block:hover {
+  width: 300px;
 }
 
 .white-block>i {
@@ -281,6 +327,7 @@ button:focus{
   -webkit-transform: scaleY(1.3);
   -ms-transform: scaleY(1.3);
       transform: scaleY(1.3);
+  transition: left 0.3s ease-in;
 }
 
 .white-block>i:before {
@@ -289,10 +336,6 @@ button:focus{
   color: #ddd;
   top: 50px;
   left: 50px;
-}
-
-.white-block:hover {
-  width: 300px;
 }
 
 .white-block span{
@@ -624,7 +667,6 @@ link_series:nth-child(54) {
         -webkit-transform: translateY(-1000px);
         transform: translateY(-1000px);
   }
-
 }
 
 
@@ -641,7 +683,6 @@ keyframes slideOut {
         -webkit-transform: translateY(-1000px);
         transform: translateY(-1000px);
   }
-
 }
 
 
@@ -650,8 +691,8 @@ keyframes slideOut {
 
   0%{ display: block; opacity:0; 
       filter: alpha(opacity=0);
-      -webkit-transform: translateY(-1000px);
-      transform: translateY(-1000px);
+      -webkit-transform: translateY(1000px);
+      transform: translateY(1000px);
   }
 
   100%{ display: block; opacity:1;
@@ -673,35 +714,5 @@ keyframes slideIn {
         filter: alpha(opacity=100);
         -webkit-transform: translateY(0px);
         transform: translateY(0px);
-  }
-}
-
-@-webkit-keyframes slidePerso {
-
-  0%{ display: block; opacity:0; 
-      filter: alpha(opacity=0);
-      -webkit-transform: translateY(1000px);
-      transform: translateY(1000px);
-  }
-
-  100%{ display: block; opacity:1;
-        filter: alpha(opacity=100);
-        -webkit-transform: translateY(-150px);
-        transform: translateY(-150px);
-  }
-}
-
-keyframes slidePerso {
-
-  0%{ display: block; opacity:0; 
-      filter: alpha(opacity=0);
-      -webkit-transform: translateY(1000px);
-      transform: translateY(1000px);
-  }
-
-  100%{ display: block; opacity:1;
-        filter: alpha(opacity=100);
-        -webkit-transform: translateY(-150px);
-        transform: translateY(-150px);
   }
 }
