result page ajout page 3

--- a/Romain/dataviz_final2/ressources/css/result/style.css
+++ b/Romain/dataviz_final2/ressources/css/result/style.css
@@ -148,6 +148,22 @@ li {
   cursor: pointer
 }
 
+.next2 {
+  position: fixed;
+  width: 100px;
+  left: 23%;
+  bottom: 10px;
+}
+
+.next2 i {
+  font-size: 50px;
+  -webkit-transform: scaleX(1.3);
+  -ms-transform: scaleX(1.3);
+      transform: scaleX(1.3);
+  color: #ddd;
+  cursor: pointer
+}
+
 .prec {
   position: fixed;
   width: 100px;
@@ -156,6 +172,23 @@ li {
 }
 
 .prec i {
+  font-size: 50px;
+  -webkit-transform: scaleX(1.3);
+  -ms-transform: scaleX(1.3);
+      transform: scaleX(1.3);
+  color: #ddd;
+  cursor: pointer
+}
+
+
+.prec2 {
+  position: fixed;
+  width: 100px;
+  left: 23%;
+  top: 10px;
+}
+
+.prec2 i {
   font-size: 50px;
   -webkit-transform: scaleX(1.3);
   -ms-transform: scaleX(1.3);
