ajout d'un zoom
pa rapport au navigateur de l’utilisateur j’ai remarquer qu’il fallait
dézoomer de 10% pour atteindre un bon quota de vue

--- a/dataviz/ressources/css/result/style.css
+++ b/dataviz/ressources/css/result/style.css
@@ -25,6 +25,9 @@
 html, body {
   height:100%;
   width:100%;
+  zoom: 0.9;
+
+
 }
 
 body {
@@ -884,7 +887,7 @@ link_series:nth-child(54) {
     height: 1px;
     width: 1px;
     background: #73afa3;
-    margin-left: 12%;
+    margin-left: 10%;
     margin-top: 5.9%;
 }
 
